# ETH-Perp-MM

./: .gitignore  Dockerfile  Makefile  README.md  REPORT.md  REPORT_TAKEHOME.md  ROADMAP.md  ROADMAP_TESTING.md  docker-compose.yml  pyproject.toml
configs/: backtest_v1.yaml  backtest_v2.yaml  backtest_v3.yaml  data.yaml  sweep.yaml  takehome.yaml  takehome_final.yaml  takehome_momentum.yaml
results/takehome_final/: markout.md  metrics.json  metrics.md
results/takehome_g20_a0.2/: markout.md  metrics.json  metrics.md
scripts/: calibrate.py  convert_to_parquet.py  generate_report.py  inspect_summary.py  markout.py  regime_check.py  run_backtest.py  run_sweep.py  run_takehome.py  signal_study.py
src/cmf_mm/: __init__.py  config.py  runner.py  types.py
src/cmf_mm/calibration/: intensity.py  pipeline.py  volatility.py
src/cmf_mm/data/: conversion.py  loader.py  schema.py  splits.py  takehome.py
src/cmf_mm/engine/: event_loop.py  matcher.py  order_manager.py
src/cmf_mm/lob/: book.py  microprice.py
src/cmf_mm/metrics/: decomposition.py  fills.py  inventory.py  pnl.py  summary.py
src/cmf_mm/reports/: figures.py  generate.py  tables.py  takehome.py
src/cmf_mm/strategy/: as_asymmetric.py  as_funding.py  as_microprice.py  avellaneda_stoikov.py  base.py
src/cmf_mm/utils/: logging.py  timing.py
tests/: conftest.py  test_book.py  test_calibration.py  test_engine_analytic.py  test_engine_integration.py  test_funding.py  test_markout.py  test_matcher.py  test_metrics.py  test_order_manager.py  test_queue_positions.py  test_strategy_as.py  test_strategy_quotes.py
week1/: .gitignore  README_baseline.md  RESULTS.md  baseline.py  eval_signals.py  explore_horizons.py  explore_volimb.py  ml_artifacts_BTC.joblib  ml_artifacts_ETH.joblib  ml_baseline.py  pyproject.toml  smoke_classify.py  week1_exploration.ipynb
