[project]
name = "cmf-mm"
version = "0.1.0"
description = "Event-driven market making backtester with Avellaneda-Stoikov strategies"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "polars>=1.0.0",
    "numpy>=1.26.0",
    "numba>=0.59.0",
    "scipy>=1.11.0",
    "joblib>=1.3.0",
    "matplotlib>=3.8.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.0",
    "pyarrow>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.4.0",
    "types-pyyaml>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cmf_mm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/cmf_mm"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle, pyflakes
    "I",            # isort
    "B",            # bugbear
    "UP",           # pyupgrade
    "N",            # pep8-naming
    "SIM",          # simplify
    "RUF",          # ruff
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "N803",   # arg name lowercase (allow A, k, T from math)
    "N806",   # var name lowercase (allow A, k, T from math)
    "RUF001", # ambiguous chars in strings (we use Greek letters in math notation)
    "RUF002", # ambiguous chars in docstrings
    "RUF003", # ambiguous chars in comments
    "B008",   # function call in default args (we use ExecutionConfig() etc.)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_return_any = true
files = ["src/cmf_mm"]

[[tool.mypy.overrides]]
module = ["numba.*", "joblib.*", "scipy.*", "matplotlib.*"]
ignore_missing_imports = true
