[project]
name = "cmf-week1"
version = "0.1.0"
description = "Week 1: exploration of liquidation_task datasets"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]
